# akuvox

./: .devcontainer.json  .gitignore  .ruff.toml  CONTRIBUTING.md  LICENSE  README.md  README_EXAMPLE.md  api.py  config_flow.py  data.py  flake.nix  helpers.py  manifest.json  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: lint.yml  release.yml
custom_components/akuvox/: __init__.py  api.py  button.py  const.py  manifest.json  sensor.py
scripts/: akuvox_integration_refresh_test.py  akuvox_refresh_and_open.py  akuvox_request_sms.py  develop  lint  setup
